// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blur tier dark 1`] = `
<View>
  <ALGSurface
    colorScheme="dark"
    glassRadius={20}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Surface
    </Text>
  </ALGSurface>
  <View
    accessibilityLabel="Save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#25272D",
          "borderRadius": 28,
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
          "minHeight": 56,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 14,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#F4F4FA",
          "flexShrink": 1,
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Save
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <ALGSurface
      colorScheme="dark"
      glassRadius={28}
      interactive={true}
      style={
        [
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 52,
              "paddingHorizontal": 22,
              "paddingVertical": 14,
            },
            undefined,
          ],
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </ALGSurface>
  </View>
  <ALGSurface
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    colorScheme="dark"
    glassRadius={12}
    glassTint="#34C759"
    style={
      [
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 24,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          undefined,
        ],
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#F4F4FA",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </ALGSurface>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#242630",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#4B4D5A",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="dark"
    disabled={false}
    forceFallback={false}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`blur tier light 1`] = `
<View>
  <ALGSurface
    colorScheme="light"
    glassRadius={20}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Surface
    </Text>
  </ALGSurface>
  <View
    accessibilityLabel="Save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F0F1F5",
          "borderRadius": 28,
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
          "minHeight": 56,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 14,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#242630",
          "flexShrink": 1,
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Save
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <ALGSurface
      colorScheme="light"
      glassRadius={28}
      interactive={true}
      style={
        [
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 52,
              "paddingHorizontal": 22,
              "paddingVertical": 14,
            },
            undefined,
          ],
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </ALGSurface>
  </View>
  <ALGSurface
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    colorScheme="light"
    glassRadius={12}
    glassTint="#34C759"
    style={
      [
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 24,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          undefined,
        ],
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#242630",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </ALGSurface>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#E7E7EE",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="light"
    disabled={false}
    forceFallback={false}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`glass tier dark 1`] = `
<View>
  <ALGSurface
    colorScheme="dark"
    glassRadius={20}
  >
    <Text>
      Surface
    </Text>
  </ALGSurface>
  <ALGButton
    accessible={false}
    colorScheme="dark"
    controlLabel="Save"
    onActivate={[Function]}
    style={
      [
        {
          "height": 84,
        },
        undefined,
      ]
    }
    title="Save"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <ALGSurface
      colorScheme="dark"
      glassRadius={28}
      interactive={true}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 52,
            "paddingHorizontal": 22,
            "paddingVertical": 14,
          },
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </ALGSurface>
  </View>
  <ALGSurface
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    colorScheme="dark"
    glassRadius={12}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 4,
          "minHeight": 24,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#F4F4FA",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </ALGSurface>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#242630",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#4B4D5A",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="dark"
    disabled={false}
    forceFallback={false}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`glass tier light 1`] = `
<View>
  <ALGSurface
    colorScheme="light"
    glassRadius={20}
  >
    <Text>
      Surface
    </Text>
  </ALGSurface>
  <ALGButton
    accessible={false}
    colorScheme="light"
    controlLabel="Save"
    onActivate={[Function]}
    style={
      [
        {
          "height": 84,
        },
        undefined,
      ]
    }
    title="Save"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <ALGSurface
      colorScheme="light"
      glassRadius={28}
      interactive={true}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 52,
            "paddingHorizontal": 22,
            "paddingVertical": 14,
          },
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </ALGSurface>
  </View>
  <ALGSurface
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    colorScheme="light"
    glassRadius={12}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 4,
          "minHeight": 24,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#242630",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </ALGSurface>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#E7E7EE",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="light"
    disabled={false}
    forceFallback={false}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`solid tier dark 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#25272D",
          "borderRadius": 20,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Surface
    </Text>
  </View>
  <View
    accessibilityLabel="Save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#25272D",
          "borderRadius": 28,
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
          "minHeight": 56,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 14,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#F4F4FA",
          "flexShrink": 1,
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Save
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#25272D",
            "borderRadius": 28,
          },
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 52,
              "paddingHorizontal": 22,
              "paddingVertical": 14,
            },
            undefined,
          ],
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 4,
          "minHeight": 24,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#25272D",
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#F4F4FA",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </View>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#242630",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#4B4D5A",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="dark"
    disabled={false}
    forceFallback={true}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
  <View
    style={
      [
        {
          "backgroundColor": "#25272D",
          "borderRadius": 24,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Android surface
    </Text>
  </View>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#242630",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#4B4D5A",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F4F4FA",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <TextInput
    accessibilityLabel="Search"
    autoCapitalize="none"
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    placeholderTextColor="#9EA2AE"
    returnKeyType="search"
    style={
      [
        {
          "backgroundColor": "#25272D",
          "borderRadius": 22,
          "color": "#F4F4FA",
          "fontSize": 17,
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 18,
        },
        undefined,
      ]
    }
    value=""
  />
  <View
    accessibilityRole="tablist"
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "alignItems": "center",
          "gap": 8,
          "paddingHorizontal": 16,
        }
      }
      horizontal={true}
      overScrollMode="never"
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          accessibilityLabel="Overview"
          accessibilityRole="tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": "1 of 2",
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 0,
              "top": 0,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(97, 89, 183, 0.161)",
                "borderRadius": 28,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 88,
              }
            }
          >
            <View
              style={
                {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_overview",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 0,
                    "position": "absolute",
                    "tintColor": "rgba(107, 112, 128, 1)",
                    "width": "100%",
                  }
                }
              />
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_overview",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 1,
                    "position": "absolute",
                    "tintColor": "rgba(97, 89, 183, 1)",
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              style={
                {
                  "width": 8,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "overflow": "hidden",
                  "width": 0,
                }
              }
            >
              <Text
                collapsable={false}
                numberOfLines={1}
                style={
                  {
                    "color": "rgba(97, 89, 183, 1)",
                    "fontSize": 15,
                    "fontWeight": "700",
                    "opacity": 1,
                  }
                }
              >
                Overview
              </Text>
            </View>
          </View>
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              {
                "flexDirection": "row",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "width": 400,
              }
            }
          >
            <Text
              collapsable={false}
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Overview
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Recent"
          accessibilityRole="tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": "2 of 2",
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 0,
              "top": 0,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(240, 241, 245, 1)",
                "borderRadius": 28,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 50,
              }
            }
          >
            <View
              style={
                {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_recent",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 1,
                    "position": "absolute",
                    "tintColor": "rgba(107, 112, 128, 1)",
                    "width": "100%",
                  }
                }
              />
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_recent",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 0,
                    "position": "absolute",
                    "tintColor": "rgba(97, 89, 183, 1)",
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              style={
                {
                  "width": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "overflow": "hidden",
                  "width": 0,
                }
              }
            >
              <Text
                collapsable={false}
                numberOfLines={1}
                style={
                  {
                    "color": "rgba(97, 89, 183, 1)",
                    "fontSize": 15,
                    "fontWeight": "700",
                    "opacity": 0,
                  }
                }
              >
                Recent
              </Text>
            </View>
          </View>
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              {
                "flexDirection": "row",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "width": 400,
              }
            }
          >
            <Text
              collapsable={false}
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Recent
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`solid tier light 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#F0F1F5",
          "borderRadius": 20,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Surface
    </Text>
  </View>
  <View
    accessibilityLabel="Save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F0F1F5",
          "borderRadius": 28,
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
          "minHeight": 56,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 14,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#242630",
          "flexShrink": 1,
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Save
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 28,
          "overflow": "visible",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F0F1F5",
            "borderRadius": 28,
          },
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 52,
              "paddingHorizontal": 22,
              "paddingVertical": 14,
            },
            undefined,
          ],
          undefined,
        ]
      }
    >
      <Text>
        Row
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="New"
    accessibilityRole="text"
    accessible={true}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 4,
          "minHeight": 24,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#F0F1F5",
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#242630",
            "fontSize": 13,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      New
    </Text>
  </View>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#E7E7EE",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <ALGSearchField
    accessible={false}
    colorScheme="light"
    disabled={false}
    forceFallback={true}
    mostRecentEventCount={0}
    onSearchBlur={[Function]}
    onSearchChange={[Function]}
    onSearchFocus={[Function]}
    onSearchSubmit={[Function]}
    placeholder="Search"
    style={
      [
        {
          "height": 64,
        },
        undefined,
      ]
    }
    value=""
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F0F1F5",
          "borderRadius": 24,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      Android surface
    </Text>
  </View>
  <View
    accessible={false}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#E7E7EE",
          "borderRadius": 16,
          "flexDirection": "row",
          "padding": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="All"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        All
      </Text>
    </View>
    <View
      accessibilityLabel="Saved 3"
      accessibilityRole="radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 12,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#242630",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved 3
      </Text>
    </View>
  </View>
  <TextInput
    accessibilityLabel="Search"
    autoCapitalize="none"
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    placeholderTextColor="#6B7080"
    returnKeyType="search"
    style={
      [
        {
          "backgroundColor": "#F0F1F5",
          "borderRadius": 22,
          "color": "#242630",
          "fontSize": 17,
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 18,
        },
        undefined,
      ]
    }
    value=""
  />
  <View
    accessibilityRole="tablist"
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "alignItems": "center",
          "gap": 8,
          "paddingHorizontal": 16,
        }
      }
      horizontal={true}
      overScrollMode="never"
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          accessibilityLabel="Overview"
          accessibilityRole="tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": "1 of 2",
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 0,
              "top": 0,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(97, 89, 183, 0.161)",
                "borderRadius": 28,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 88,
              }
            }
          >
            <View
              style={
                {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_overview",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 0,
                    "position": "absolute",
                    "tintColor": "rgba(107, 112, 128, 1)",
                    "width": "100%",
                  }
                }
              />
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_overview",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 1,
                    "position": "absolute",
                    "tintColor": "rgba(97, 89, 183, 1)",
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              style={
                {
                  "width": 8,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "overflow": "hidden",
                  "width": 0,
                }
              }
            >
              <Text
                collapsable={false}
                numberOfLines={1}
                style={
                  {
                    "color": "rgba(97, 89, 183, 1)",
                    "fontSize": 15,
                    "fontWeight": "700",
                    "opacity": 1,
                  }
                }
              >
                Overview
              </Text>
            </View>
          </View>
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              {
                "flexDirection": "row",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "width": 400,
              }
            }
          >
            <Text
              collapsable={false}
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Overview
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Recent"
          accessibilityRole="tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": "2 of 2",
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 0,
              "top": 0,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(240, 241, 245, 1)",
                "borderRadius": 28,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 50,
              }
            }
          >
            <View
              style={
                {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_recent",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 1,
                    "position": "absolute",
                    "tintColor": "rgba(107, 112, 128, 1)",
                    "width": "100%",
                  }
                }
              />
              <Image
                collapsable={false}
                source={
                  {
                    "uri": "ic_recent",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "opacity": 0,
                    "position": "absolute",
                    "tintColor": "rgba(97, 89, 183, 1)",
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              style={
                {
                  "width": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "overflow": "hidden",
                  "width": 0,
                }
              }
            >
              <Text
                collapsable={false}
                numberOfLines={1}
                style={
                  {
                    "color": "rgba(97, 89, 183, 1)",
                    "fontSize": 15,
                    "fontWeight": "700",
                    "opacity": 0,
                  }
                }
              >
                Recent
              </Text>
            </View>
          </View>
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              {
                "flexDirection": "row",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "width": 400,
              }
            }
          >
            <Text
              collapsable={false}
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Recent
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
